Revert "issue #94 - fix grid overflow problem"

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -47,11 +47,6 @@
   }
 }
 
-.main {
-  width: 100%;
-  overflow: hidden;
-}
-
 /* helper to hide meta elements */
 .is-hidden {
   display: none;
